<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/login_create"
            android:textColor="@color/color_000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login_email"
            />

        <EditText
            android:id="@+id/edt_register_email"
            style="@style/login_edt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_psd"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/edt_register_psd"
            style="@style/login_edt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_re_psd"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/edt_register_repsd"
            style="@style/login_edt"/>

        <View
            android:id="@+id/v_change"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>
</layout>
